Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.4.1
-
None
-
-
1fc49f0c2f (qt/qtmultimedia/dev), a071f3ee1 (6.4), 7aa46959d (dev), 094ec7a10 (6.5)
Description
Videotoolbox doesn't recognize some core video formats, e.g.
kCVPixelFormatType_422YpCbCr8_yuvs
kCVPixelFormatType_422YpCbCr8FullRange
Run
av_map_videotoolbox_format_to_pixfmt(cvPixelFormat)
Attachments
Issue Links
- duplicates
-
QTBUG-111704 Nothing output about video streaming.
-
- Closed
-