Fix ffmpeg camera crash when videotoolbox doesn't support format

The change just fixes the crash: hw accel is not valid if
videotoolbox doesn't support core format (e.g. 'yuvs', 'yuvf').
Ffmpeg camera still doesn't work with these core formats,
it's to be fixed under the bug QTBUG-109009 (most likely, on ffmpeg
library side).

The issue is reproduced with pretty old cameras, e.g. on
macbook pro 2015 year.

Fixes: QTBUG-109009
Change-Id: Ib36a7e6b3b8c71fa1a3a2717c3509ca30d3b5caa
Reviewed-by: Doris Verria <doris.verria@qt.io>
(cherry picked from commit 1fc49f0c2ff603c39ba9d1dd90f0e621a0fde488)